# EvoAgentX

./: .gitignore  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
api/: models.html  optimizers.html
docs/: installation.md
docs/zh/: installation.md
evoagentx/core/: base_config.py  metadata.py  module_utils.py
evoagentx/models/: aliyun_model.py  base_model.py  litellm_model.py  model_configs.py  model_utils.py  openai_model.py  openrouter_model.py  siliconflow_model.py
evoagentx/prompts/: tool_calling.py
evoagentx/tools/: alita_agent.py
evoagentx/utils/: utils.py
examples/: alita_agent_example.py
search/: search_index.json
tests/src/agents/: test_content_field_conflict.py
tests/src/core/: test_base_config.py  test_dependency_extras.py  test_security_env_files.py
tests/src/models/: mock_response.py  test_openrouter_model.py
zh/api/: models.html  optimizers.html
