[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evoagentx"
version = "0.1.0"
description = "A framework for evolving agentic workflows with LLMs."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "EvoAgentX Team", email = "evoagentx.ai@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "overdue",
    "tenacity",
    "networkx>=3.3",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pydantic>=2.9.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "openai>=1.55.3",
    "litellm>=1.75.2",
    "dashscope>=1.23.4",
    "tree_sitter",
    "tree_sitter_python",
    "PyYAML>=6.0",
    "tqdm>=4.65.0",
    "regex",
    "jsonschema"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "pytest-subtests",
    "pytest-json-report",
    "ruff"
]
rag = [
    "llama-index",
    "llama-index-vector-stores-faiss",
    "llama-index-graph-stores-neo4j",
    "llama-index-embeddings-azure-openai",
    "faiss-cpu==1.8.0.post1",
    "sentence-transformers",
    "neo4j",
    "ollama",
    "docx2txt",
    "python-pptx"
]
tools = [
    "docker>=6.1.2",
    "googlesearch-python",
    "wikipedia",
    "beautifulsoup4",
    "selenium",
    "html2text",
    "fastmcp>=2.2.0,<3.0",
    "PyPDF2",
    "Pillow",
    "exa-py>=2.0.0",
    "pymongo>=4.6.0",
    "psycopg2-binary>=2.9.0",
    "spacy",
    "selectolax",
    "feedparser",
    "telethon>=1.35.0",
    "ddgs",
    "reportlab>=3.6.0",
    "webdriver-manager>=3.8.0",
    "browser-use; python_version >= \"3.11\"",
    "browser-use-py310x; python_version < \"3.11\"",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0"
]
multimodal = [
    "torch",
    "datasets>=3.4.0",
    "voyageai"
]
optimizers = [
    "textgrad>=0.1.8",
    "dspy",
    "optuna",
    "cloudpickle",
    "ujson>=5.9.0"
]
benchmarks = [
    "sympy"
]
viz = [
    "matplotlib>=3.10.0"
]
all = [
    "llama-index",
    "llama-index-vector-stores-faiss",
    "llama-index-graph-stores-neo4j",
    "llama-index-embeddings-azure-openai",
    "faiss-cpu==1.8.0.post1",
    "sentence-transformers",
    "neo4j",
    "ollama",
    "docx2txt",
    "python-pptx",
    "docker>=6.1.2",
    "googlesearch-python",
    "wikipedia",
    "beautifulsoup4",
    "selenium",
    "html2text",
    "fastmcp>=2.2.0,<3.0",
    "PyPDF2",
    "Pillow",
    "exa-py>=2.0.0",
    "pymongo>=4.6.0",
    "psycopg2-binary>=2.9.0",
    "spacy",
    "selectolax",
    "feedparser",
    "telethon>=1.35.0",
    "ddgs",
    "reportlab>=3.6.0",
    "webdriver-manager>=3.8.0",
    "browser-use; python_version >= \"3.11\"",
    "browser-use-py310x; python_version < \"3.11\"",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "torch",
    "datasets>=3.4.0",
    "voyageai",
    "textgrad>=0.1.8",
    "dspy",
    "optuna",
    "cloudpickle",
    "ujson>=5.9.0",
    "sympy",
    "matplotlib>=3.10.0"
]

[project.urls]
Homepage = "https://github.com/EvoAgentX/EvoAgentX"
Documentation = "https://EvoAgentX.github.io/EvoAgentX/"
Repository = "https://github.com/EvoAgentX/EvoAgentX"

[tool.setuptools.packages.find]
where = ["."]
